- in mode "--rdf", improved efficiency in the computation of the partial RDFs. Also fixed a bug in the computation of the total RDF when atoms of different species and different densities were present.
- option "-reduce-cell" now checks that stoichiometry is preserved.
- fixed a bug when reading and writing POSCAR files where the keywords "Selective dynamics" were involved.
- fixed a bug when writing LAMMPS data file when atom "types" were defined, but some types were not assigned to any atom in the system. Fixed a bug in the writing of box dimensions, when one or several box vectors had negative components. Thanks to Eerik Voimanen, Tampere University, Finland, for providing a fix for this bug.
- fixed a bug in mode "--density", where the density was not correctly computed if the target property was the atomic mass. Thanks to Jean Furstoss, UMET, University of Lille, France, for pointing out this bug.
- new option "-dislocation file" allows reading a dislocation Burgers vector and position from a file. For now it supports only planar dislocation loops where the Burgers vector is contained in the loop plane.
- fixed a bug in option "-cell" where option was skipped when requiring zero length for xy, yz, or xz component.
- fixed a bug in option "-orthogonal-cell" where the new number of atoms was not always correctly estimated, leading to a segmentation fault.
- fixed a bug where the position was not always computed correctly when using an operation with "box", e.g. when introducing dislocations. Thanks to Samaneh Nasiri, Friedrich-Alexander-University Erlangen-Nürnberg, Germany, for pointing out this bug.
- fixed a bug in EXPREVAL where expressions containing a factorial preceded by a parenthesis would cause a segmentation fault.
- script "install.sh" now proposes to compile Atomsk if binary does not exist in current directory.


Beta 0.11.2 (04 Nov. 2021)
--------------------------
- fixed a bug in neighbor search.