@@ -10,7 +10,7 @@ MODULE bindshells
 !*     Université de Lille, Sciences et Technologies                              *
 !*     UMR CNRS 8207, UMET - C6, F-59655 Villeneuve D'Ascq, France                *
 !*     pierre.hirel@univ-lille.fr                                                 *
-!* Last modification: P. Hirel - 09 June 2022                                     *
+!* Last modification: P. Hirel - 23 June 2022                                     *
 !**********************************************************************************
 !* This program is free software: you can redistribute it and/or modify           *
 !* it under the terms of the GNU General Public License as published by           *
@@ -43,9 +43,12 @@ SUBROUTINE BSHELLS_XYZ(H,P,S,AUXNAMES,AUX,SELECT)
 IMPLICIT NONE
 CHARACTER(LEN=128):: msg
 CHARACTER(LEN=128),DIMENSION(:),ALLOCATABLE,INTENT(INOUT):: AUXNAMES !names of auxiliary prop.
+CHARACTER(LEN=128),DIMENSION(:),ALLOCATABLE:: newAUXNAMES !names of auxiliary prop. (temporary)
+LOGICAL:: doaux
+INTEGER:: icore, ishell
 INTEGER:: i, j, k, l
 INTEGER:: Nbound !number of shells that were re-bound
-INTEGER:: NP     !number of cores detected
+INTEGER:: NP, NS !number of cores detected
 INTEGER:: mass, q, qs !columns of AUX where mass, charge of cores and shells
 INTEGER,DIMENSION(:),ALLOCATABLE:: Nlist !index of nearest shell
 LOGICAL:: exceeds100 !does the number of neighbours exceed 100?
@@ -61,14 +64,16 @@ REAL(dp),DIMENSION(:,:),ALLOCATABLE:: newP, newS, newAUX  !auxiliary properties 
 REAL(dp),DIMENSION(:,:),ALLOCATABLE:: V_NN  !position of nearest shell
 !
 !Initialize variables
+doaux=.FALSE.
 Nbound=0
 NP=0
 mass=0
 q=0
 qs=0
 IF(ALLOCATED(newP)) DEALLOCATE(newP)
-IF(ALLOCATED(newAUX)) DEALLOCATE(newS)
+IF(ALLOCATED(newS)) DEALLOCATE(newS)
 IF(ALLOCATED(newAUX)) DEALLOCATE(newAUX)
+IF(ALLOCATED(newAUXNAMES)) DEALLOCATE(newAUXNAMES)
 !
 !
 msg = 'Entering BSHELLS_XYZ'
@@ -76,12 +81,15 @@ CALL ATOMSK_MSG(999,(/msg/),(/0.d0/))
 !
 CALL ATOMSK_MSG(2105,(/''/),(/0.d0/))
 !
-IF( ALLOCATED(AUXNAMES) ) THEN
+IF( ALLOCATED(AUXNAMES) .AND. ALLOCATED(AUX) ) THEN
+  doaux=.TRUE.
   DO i=1,SIZE(AUXNAMES)
     IF( AUXNAMES(i)=="mass" ) THEN
       mass = i
     ELSEIF( AUXNAMES(i)=="q" ) THEN
       q = i
+    ELSEIF( AUXNAMES(i)=="qs" ) THEN
+      qs = i
     ENDIF
   ENDDO
 ENDIF
@@ -101,9 +109,11 @@ IF( ALLOCATED(SELECT) ) THEN
     newS(:,:) = 0.d0
     !
     j=0
+    NP=SIZE(P,1)
     DO i=1,SIZE(P,1)
       IF( SELECT(i) ) THEN
         !This atom is selected => make it a shell
+        NP = NP-1
         j=j+1
         newS(j,:) = P(i,:)
         !Remove it from list of atoms
@@ -121,6 +131,7 @@ IF( ALLOCATED(SELECT) ) THEN
       j=0
       DO i=1,SIZE(AUX,1)
         IF( P(i,4)>0.1d0 ) THEN
+          j=j+1
           newAUX(j,:) = AUX(i,:)
         ENDIF
       ENDDO
@@ -170,13 +181,30 @@ ELSEIF( .NOT.ALLOCATED(S) ) THEN
   ALLOCATE(newS(SIZE(P,1),4))
   newS(:,:) = 0.d0
   !
-  IF( q>0 ) THEN
-    CALL RESIZE_DBLEARRAY2(AUX,SIZE(AUX,1),SIZE(AUX,2)+1,l)
-    qs = SIZE(AUX,2)
+  IF( doaux ) THEN
+    k = SIZE(AUXNAMES) !number of auxiliary properties
+    IF( q>0 ) THEN
+      !Ion charges are defined in AUX
+      IF( qs==0 ) THEN
+        !Ion charges are defined, but not shell charges
+        !We will add them later: add a column in AUX
+        k = k+1
+        ALLOCATE(newAUXNAMES(k))
+        newAUXNAMES(1:k-1) = AUXNAMES(1:k-1)
+        newAUXNAMES(k) = "qs"
+        DEALLOCATE(AUXNAMES)
+        ALLOCATE(AUXNAMES(k))
+        AUXNAMES(:) = newAUXNAMES(:)
+        DEALLOCATE(newAUXNAMES)
+      ENDIF
+    ENDIF
+    !
+    ALLOCATE(newAUX(SIZE(P,1),k))
+    newAUX(:,:) = 0.d0
   ENDIF
   !
-  NP = 0
-  k = 0
+  NP = 0 !counter for cores
+  NS = 0 !counter for shells
   !Loop on all particles in P
   DO i=1,SIZE(P,1)-1
     l=0 !counter =0 as long as no shell is found for atom #i
@@ -184,61 +212,87 @@ ELSEIF( .NOT.ALLOCATED(S) ) THEN
       !Loop on all other particles in P
       DO j=i+1,SIZE(P,1)
         !
-        !Compute distance between particles i and j
-        distance = VECLENGTH( P(j,1:3) - P(i,1:3) )
-        !
-        IF( distance < maxCSdistance ) THEN
-          !Particles i and j are very close to each other, they form a core-shell pair
-          !Determine which one is the core and which the shell
-          !and remove the shell from P (set all =0, arrays will be rewritten later)
-          l=1 !to indicate a pair was found
-          NP=NP+1
-          k=k+1
-          IF( mass>0 ) THEN
-            IF( AUX(i,mass)>AUX(j,mass) ) THEN
-              !i is the core, j is the shell
-              newP(NP,:) = P(i,:)
-              newS(k,:) = P(j,:)
-              P(i,:) = 0.d0
-              P(j,:) = 0.d0
-            ELSE
-              !j is the core, i is the shell
-              newP(NP,:) = P(j,:)
-              newS(k,:) = P(i,:)
-              P(i,:) = 0.d0
-              P(j,:) = 0.d0
-            ENDIF
-          ELSEIF( q>0 ) THEN
-            IF( AUX(i,q)>0.d0 ) THEN
-              !i is the core, j is the shell
-              newP(NP,:) = P(i,:)
-              newS(k,:) = P(j,:)
-              P(i,:) = 0.d0
-              P(j,:) = 0.d0
-            ELSE
-              !Particle i has negative charge
-              IF( AUX(j,q)<AUX(i,q) ) THEN
-                newP(NP,:) = P(i,:)
-                newS(k,:) = P(j,:)
-                P(i,:) = 0.d0
-                P(j,:) = 0.d0
+        IF( P(j,4)>0.1d0 ) THEN
+          !Compute distance between particles i and j
+          distance = VECLENGTH( P(j,1:3) - P(i,1:3) )
+          !
+          IF( distance < maxCSdistance ) THEN
+            !Particles i and j are very close to each other, they form a core-shell pair
+            !Determine which one is the core and which the shell
+            !and remove the shell from P (set all =0, arrays will be rewritten later)
+            l=1 !to indicate a pair was found
+            NP=NP+1 !counter for cores
+            NS=NS+1 !counter for shells
+            IF( q>0 .AND. qs>0 ) THEN
+              IF( AUX(i,q)>0.d0 ) THEN
+                !Charge of i is positive
+                IF( AUX(i,q)>AUX(j,q) .OR. AUX(i,q)>AUX(j,qs) ) THEN
+                  !qi > qj => i is the core, j is the shell
+                  icore = i
+                  ishell = j
+                ELSE
+                  !Otherwise j is the core, i is the shell
+                  icore = j
+                  ishell = i
+                ENDIF
               ELSE
-                newP(NP,:) = P(j,:)
-                newS(k,:) = P(i,:)
-                P(i,:) = 0.d0
-                P(j,:) = 0.d0
+                !Particle i has negative charge
+                IF( AUX(j,qs)<AUX(i,q) ) THEN
+                  icore = i
+                  ishell = j
+                ELSE
+                  icore = j
+                  ishell = i
+                ENDIF
               ENDIF
+            ELSEIF( mass>0 ) THEN
+              IF( AUX(i,mass)>AUX(j,mass) ) THEN
+                !i is the core, j is the shell
+                icore = i
+                ishell = j
+              ELSE
+                !j is the core, i is the shell
+                icore = j
+                ishell = i
+              ENDIF
+            ELSEIF( q>0 ) THEN
+              IF( AUX(i,q)>0.d0 ) THEN
+                !i is the core, j is the shell
+                icore = i
+                ishell = j
+              ELSE
+                !Particle i has negative charge
+                IF( AUX(j,q)<AUX(i,q) ) THEN
+                  icore = i
+                  ishell = j
+                ELSE
+                  icore = j
+                  ishell = i
+                ENDIF
+              ENDIF
+            ELSE
+              !No property to rely on => assume that i is the core and j the shell
+              icore = i
+              ishell = j
             ENDIF
-          ELSE
-            !No property to rely on => assume that i is the core and j the shell
-            newS(k,:) = P(i,:)
-            newP(NP,:) = 0.d0
+            newP(NP,:) = P(icore,:)
+            newS(NS,:) = P(ishell,:)
+            newS(NS,4) = P(icore,4)
+            P(icore,:) = 0.d0
+            P(ishell,:) = 0.d0
+            IF(doaux) THEN
+              DO k=1,SIZE(AUX,2)
+                newAUX(NS,k) = AUX(icore,k)
+              ENDDO
+              IF(qs>0) newAUX(NP,SIZE(newAUX,2)) = AUX(icore,qs)
+            ENDIF
+            !We have found a core/shell pair, we can break the loop on atoms j
+            EXIT
           ENDIF
-          !We have found a core/shell pair, we can break the loop on atoms j
-          EXIT
+          !
         ENDIF
         !
-      ENDDO
+      ENDDO !end loop on j
       !
       IF( l==0 ) THEN
         !No particle was found close to particle #i
@@ -246,26 +300,22 @@ ELSEIF( .NOT.ALLOCATED(S) ) THEN
         !Particle #j is not a shell and will be dealt with in another loop
         NP=NP+1
         newP(NP,:) = P(i,:)
+        newAUX(NP,:) = P(i,:)
       ENDIF
       !
     ENDIF
-  ENDDO
+  ENDDO !end loop on i
   !
-  CALL ATOMSK_MSG(2154,(/''/),(/DBLE(NP),DBLE(k)/))
+  CALL ATOMSK_MSG(2154,(/''/),(/DBLE(NP),DBLE(NS)/))
   !
   !Resize old arrays
   IF( ALLOCATED(AUX) .AND. (ALLOCATED(AUXNAMES)) ) THEN
-    ALLOCATE(newAUX(NP,SIZE(AUXNAMES)))
-    newAUX(:,:) = 0.d0
-    j=0
-    DO i=1,SIZE(AUX,1)
-      IF( P(i,4)>0.1d0 ) THEN
-        newAUX(j,:) = AUX(i,:)
-      ENDIF
-    ENDDO
     DEALLOCATE(AUX)
-    ALLOCATE(AUX(SIZE(newAUX,1),SIZE(newAUX,2)))
-    AUX(:,:) = newAUX(:,:)
+    ALLOCATE( AUX( NP , SIZE(newAUX,2) ) )
+    AUX(:,:) = 0.d0
+    DO i=1,NP
+      AUX(i,:) = newAUX(i,:)
+    ENDDO
     DEALLOCATE(newAUX)
   ENDIF
   !
@@ -283,7 +333,7 @@ ELSEIF( .NOT.ALLOCATED(S) ) THEN
   DEALLOCATE(newP)
   !
   !Save shells (newS) into array S
-  ALLOCATE(S(SIZE(P,1),4))
+  ALLOCATE(S(NP,4))
   S(:,:) = 0.d0
   j=0
   DO i=1,SIZE(newS,1)
